Projeto html finalizado - estático

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 
     <div class="container-banner">
         <div class="center">
+            <div class="container-list">
+                <ul>
+                    <li>Lorem ipsum silor domor amet</li>
+                    <li>Lorem ipsum silor domor amet</li>
+                    <li>Lorem ipsum silor domor amet</li>
+                    <li>Lorem ipsum silor domor amet</li>
+                </ul>
+            </div>
+
             <div class="form">
                 <h2>Preencha o formulário e inície a sua
                     caminhada para virar um WebMaster!
@@ -49,6 +58,77 @@
             </div>
         </div>
     </div>
+
+    <div class="container-2">
+        <div class="center">
+            <h2>Lorem ipsum</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate aut, ullam impedit, similique neque
+                eaque, eligendi adipisci quam amet culpa quae? Voluptatibus id eligendi a repellat voluptas accusamus,
+                quisquam facilis!</p>
+
+        </div>
+        <!--center-->
+        <div class="arrow"></div>
+    </div>
+    <!--container-2-->
+
+    <div class="section-1">
+        <div class="center">
+
+            <h2>Aprenda com quem está no mercado</h2>
+            <div class="container-section">
+                <div class="container-single">
+                    <div><img src="images/icon.png" alt="" srcset=""></div>
+                    <div class="text-container-single">
+                        <h2>Lorem ipsum</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima tenetur fugit quas deserunt!
+                            Pariatur id alias eligendi, sunt animi nulla distinctio adipisci maiores! Quidem quaerat
+                            ipsam
+                            tempore laudantium optio debitis.</p>
+                    </div>
+                    <!--text-container-single-->
+                </div>
+                <!--container-single-->
+                <div class="container-single">
+                    <div><img src="images/icon.png" alt="" srcset=""></div>
+                    <div class="text-container-single">
+                        <h2>Lorem ipsum</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima tenetur fugit quas deserunt!
+                            Pariatur id alias eligendi, sunt animi nulla distinctio adipisci maiores! Quidem quaerat
+                            ipsam
+                            tempore laudantium optio debitis.</p>
+                    </div>
+                    <!--text-container-single-->
+                </div>
+                <!--container-single-->
+                <div class="container-single">
+                    <div><img src="images/icon.png" alt="" srcset=""></div>
+                    <div class="text-container-single">
+                        <h2>Lorem ipsum</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima tenetur fugit quas deserunt!
+                            Pariatur id alias eligendi, sunt animi nulla distinctio adipisci maiores! Quidem quaerat
+                            ipsam
+                            tempore laudantium optio debitis.</p>
+                    </div>
+                    <!--text-container-single-->
+                </div>
+                <!--container-single-->
+            </div>
+            <!--container-section-->
+            <div class="clear"></div>
+        </div>
+    </div>
+    <!--section-1-->
+
+
+    <div class="footer">
+
+        <p>Todos os direitos reservados</p>
+        <p>Av. Lorem Ipsum, silor domor 211 - Florianópolis-SC</p>
+
+    </div>
+
+    <!--footer-->
 
 </body>
 
