--- a/index.html
+++ b/index.html
@@ -19,43 +19,47 @@
 
     <div class="container-banner">
         <div class="center">
-            <div class="container-list">
-                <ul>
-                    <li>Lorem ipsum silor domor amet</li>
-                    <li>Lorem ipsum silor domor amet</li>
-                    <li>Lorem ipsum silor domor amet</li>
-                    <li>Lorem ipsum silor domor amet</li>
-                </ul>
+            <div>
+                <div class="container-list">
+                    <ul>
+                        <li>Lorem ipsum silor domor amet</li>
+                        <li>Lorem ipsum silor domor amet</li>
+                        <li>Lorem ipsum silor domor amet</li>
+                        <li>Lorem ipsum silor domor amet</li>
+                    </ul>
+                </div>
             </div>
+            <div>
+                <div class="form">
+                    <h2>Preencha o formulário e inície a sua
+                        caminhada para virar um WebMaster!
+                    </h2>
+                    <form action="">
+                        <div class="input-container">
+                            <span>Nome*</span>
+                            <input type="text" name="nome" required id="">
+                        </div>
 
-            <div class="form">
-                <h2>Preencha o formulário e inície a sua
-                    caminhada para virar um WebMaster!
-                </h2>
-                <form action="">
-                    <div class="input-container">
-                        <span>Nome*</span>
-                        <input type="text" name="nome" required id="">
-                    </div>
+                        <div class="input-container">
+                            <span>E-mail*</span>
+                            <input type="text" name="e-mail" required id="">
+                        </div>
 
-                    <div class="input-container">
-                        <span>E-mail*</span>
-                        <input type="text" name="e-mail" required id="">
-                    </div>
+                        <div class="input-container">
+                            <span>Telefone*</span>
+                            <input type="text" name="telefone" required id="">
+                        </div>
 
-                    <div class="input-container">
-                        <span>Telefone*</span>
-                        <input type="text" name="telefone" required id="">
-                    </div>
+                        <p class="warning">*Campos obrigatórios</p>
 
-                    <p class="warning">*Campos obrigatórios</p>
+                        <div class="input-container">
+                            <input type="submit" value="Enviar" name="acao">
 
-                    <div class="input-container">
-                        <input type="submit" value="Enviar" name="acao">
-
-                    </div>
-                </form>
+                        </div>
+                    </form>
+                </div>
             </div>
+            <div class="clear"></div>
         </div>
     </div>
 
