--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Site responsivo - Estudo">
+    <meta name="keywords" content="Estudo, dankiCode">
+    <meta name="author" content="Rafael">
     <title>Projeto 01</title>
 </head>
 
